refactor: reduce sonar lint issues. Change variable names