@@ -2,7 +2,6 @@ package org.pack.manager.api.model;
 
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import lombok.Getter;
 import lombok.Setter;
@@ -36,19 +35,19 @@ public class Package {
     public void setGroups(String groups) {
         this.groups = Arrays.stream(groups.split("\\s+"))
                 .map(String::trim)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public void setProvides(String provides) {
         this.provides = Arrays.stream(provides.split("\\s+"))
                 .map(String::trim)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public void setDepends(String depends) {
         this.depends = Arrays.stream(depends.split("\\s+"))
                 .map(String::trim)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public void setOptionalDependencies(String optionalDependencies) {
@@ -58,25 +57,25 @@ public class Package {
     public void setRequestedBy(String requestedBy) {
         this.requestedBy = Arrays.stream(requestedBy.split("\\s+"))
                 .map(String::trim)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public void setOptionalFor(String optionalFor) {
         this.optionalFor = Arrays.stream(optionalFor.split("\\s+"))
                 .map(String::trim)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public void setInConflictWith(String inConflictWith) {
         this.inConflictWith = Arrays.stream(inConflictWith.split("\\s+"))
                 .map(String::trim)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public void setReplaces(String replaces) {
         this.replaces = Arrays.stream(replaces.split("\\s+"))
                 .map(String::trim)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public void setInstallationScript(String installationScript) {
